--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f979ca54-6e1a-4cbe-8cfd-66b7af6697f4.preview.emergentagent.com
 WDS_SOCKET_PORT=443
